--- a/debian/install
+++ b/debian/install
@@ -3,6 +3,7 @@ grunt            /usr/lib/node_modules/site-builder
 gwwwunt          /usr/lib/node_modules/site-builder
 preview          /usr/lib/node_modules/site-builder
 publish          /usr/lib/node_modules/site-builder
+render           /usr/lib/node_modules/site-builder
 scripts          /usr/lib/node_modules/site-builder
 tasks            /usr/lib/node_modules/site-builder
 package.json     /usr/lib/node_modules/site-builder
