MGS-822 Use CouchDB for publish log instead of crudio.

--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,4 @@
+couch            /usr/lib/node_modules/site-builder
 decommission     /usr/lib/node_modules/site-builder
 grunt            /usr/lib/node_modules/site-builder
 gwwwunt          /usr/lib/node_modules/site-builder
