MGS-1172 Replaced slugify module with a simpler implementation.

--- a/debian/install
+++ b/debian/install
@@ -1,3 +1,4 @@
+common           /usr/lib/node_modules/site-builder
 decommission     /usr/lib/node_modules/site-builder
 grunt            /usr/lib/node_modules/site-builder
 preview          /usr/lib/node_modules/site-builder
